Testes unitários.
